tests/res/compile_errors/duplicate_declaration.say
say x = 1;
say x = 2; // error: Variable 'x' already declared in this scope
